--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,12 +2,12 @@
   url: /
   external: false
 
-- title: about
-  url: /about/
+- title: research
+  url: /research/
   external: false
 
-- title: notes
-  url: /notes/
+- title: contact
+  url: /contact/
   external: false # set true if you using external link, see bellow
 
 # Example:
