added a project page for rss paper among other things

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >-
   I am a PhD student in Computer Science at Georgia Tech.
 lang: en-US
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/mahendrata.now.sh
+repo: #https://github.com/piharpi/mahendrata.now.sh
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
